# CLAWDIA

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  __init__.py  _dictionary_base.py  _dictionary_dictol.py  _dictionary_lrsdl.py  _dictionary_spams.py  children.py  classification.py  clawdia.dictionaries.html  clawdia.estimators.html  clawdia.lib.html  clawdia.pipeline.html  clawdia.plotting.html  dictionaries.py  estimators.py  genindex.html  index.html  lib.py  modules.html  objects.inv  parents.py  patches_1d.py  pipeline.py  plotting.py  py-modindex.html  pyproject.toml  requirements.txt  run-pipeline.py  run-pipeline.yaml  search.html  searchindex.js  setup.py  util.py
_modules/: index.html
_modules/clawdia/: _dictionary_lrsdl.html  _dictionary_spams.html  dictionaries.html  estimators.html  lib.html  pipeline.html  plotting.html
_modules/dictol/: LRSDL.html  base.html
_sources/: clawdia.dictionaries.rst.txt  clawdia.estimators.rst.txt  clawdia.lib.rst.txt  clawdia.plotting.rst.txt
clawdia/: __init__.py  _dictionary_lrsdl.py  _dictionary_spams.py  dictionaries.py  estimators.py  lib.py  pipeline.py  plotting.py
docs/: build_apidoc.sh  clawdia.html  dictionaries.html  estimators.html  index.html  lib.html  pipeline.html  plotting.html  search.js
docs/clawdia/: _dictionary_lrsdl.html  _dictionary_spams.html  dictionaries.html  estimators.html  lib.html  pipeline.html  plotting.html
docs/source/: clawdia.dictionaries.rst  clawdia.estimators.rst  (+7 more)
tests/: Data generation.ipynb  dataset.py  denoising_dictionary.py  gen_test_dataset.py  parameters.yaml  test__dictionary_lrsdl.py  test__dictionary_spams.py  test_dictionary_spams.py  test_lib.py
(+42 files in other folders)
