[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CLAWDIA"
version = "0.4.3"
authors = [
    { name = "Miquel Lluís Llorens Monteagudo", email = "miquel.llorens@uv.es" }
]
description = "A Python package for Gravitational-Wave signal analysis via Sparse Dictionary Learning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "dictol>=0.1.1",
    "matplotlib>=3.9.1",
    "numpy>=1.26.4",
    "pytest>=7.4.4",
    "scipy>=1.14.1,<2.0.0",
    "spams-bin>=2.6.5.4",
    "tqdm>=4.66.1"
]

[project.urls]
Homepage = "https://github.com/MiquelLluis/clawdia"

[tool.setuptools]
packages = ["clawdia"]
 
