[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CLAWDIA"
version = "0.5.1"
description = "A Python package for Gravitational-Wave signal analysis via Sparse Dictionary Learning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Miquel Lluís Llorens Monteagudo", email = "miquel.llorens@uv.es" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "dictol>=0.1.0",
    "matplotlib>=3.9.1",
    "numpy>=1.26.4,<2",
    "scipy>=1.14.1",
    "spams-bin>=2.6.5.4",
    "tqdm>=4.66.1"
]

[project.urls]
Homepage = "https://github.com/MiquelLluis/clawdia"

[tool.setuptools]
packages = ["clawdia"]
include-package-data = true
